# IotSecurityBase

./: .gitignore  Readme.md  platformio.ini
include/: lv_conf.h
lib/Dispatcher/src/: Dispatcher.cpp  Dispatcher.h  Topic.cpp
lib/QueueTask/: QueueTask.cpp  QueueTask.h
lib/UI/src/: CMakeLists.txt  ControlSensorsScreen.cpp  ControlSensorsScreen.h  DetectSensorsScreen.cpp  DetectSensorsScreen.h  EditDetectSensorScreen.cpp  EditDetectSensorScreen.h  GeneralSettingsScreen.cpp  GeneralSettingsScreen.h  LGFX.h  LockScreen.cpp  LockScreen.h  MainScreen.cpp  MainScreen.h  MqttConfigScreen.cpp  MqttConfigScreen.h  Screen.cpp  Screen.h  ScreenFactory.cpp  ScreenFactory.h  Screens.cpp  Screens.h  SensorScreen.cpp  SensorScreen.h  UiControl.cpp  UiControl.h  UiEventHandler.cpp  UiEventHandler.h  UiMutex.cpp  UiMutex.h  WifiSettingsScreen.cpp  WifiSettingsScreen.h  filelist.txt  touch.h  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
lib/UI/src/components/: ui_comp.c  ui_comp.h  ui_comp_controlitem.c  ui_comp_controlitem.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_sensoritem.c  ui_comp_sensoritem.h
lib/UI/src/images/: ui_img_1515518950.c  ui_img_548092219.c  ui_img_padlock_png.c  ui_img_setting_png.c
lib/UI/src/screens/: ui_controlsScreen.c  ui_edittSensorScreen.c  ui_generalSettingsScreen.c  ui_home.c  ui_lockScreen.c  ui_mqttConfigScreen.c  ui_sensorsScreen.c  ui_wifiConfigScreen.c
src/: main.cpp
ui/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
ui/backup/: SquareLine_Project.spj
ui/components/: SensorItem.ecomp
(+69 files in other folders)
